# cpp-chess

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  build.zig  build.zig.zon
.github/workflows/: scorecard.yml
include/: Board.h  Display.h  Game.h  Menu.h  Piece.h  Square.h  TerminalUserInterface.h  UserInterface.h  chess960.h  safe_ctype.h
include/displays/: AsciiDisplay.h  LetterDisplay.h  TwoLetterDisplay.h  WindowsConsoleDisplay.h
include/ui/: AsciiUi.h  LetterUi.h  TwoLetterUi.h  WindowsConsoleUi.h
src/: Board.cpp  Board.h  Display.cpp  Game.cpp  Game.h  Menu.cpp  Piece.cpp  Piece.h  Square.h  TerminalUserInterface.cpp  TerminalUserInterface.h  UserInterface.cpp  UserInterface.h  chess960.cpp  chess960.h  main.cpp  safe_ctype.cpp  safe_ctype.h  throw_if_empty.h
src/displays/: AsciiDisplay.cpp  LetterDisplay.cpp  TwoLetterDisplay.cpp  WindowsConsoleDisplay.cpp
src/ui/: AsciiUi.cpp  AsciiUi.h  LetterUi.cpp  LetterUi.h  TwoLetterUi.cpp  TwoLetterUi.h  WindowsConsoleUi.cpp  WindowsConsoleUi.h
